src/utils/testing/tests/snapshots/caesura__utils__testing__tests__album_generator_tests__sample_flac24_48.snap
---
source: src/utils/testing/tests/album_generator_tests.rs
expression: snapshot
---
- directory: ~
  filename: ".generated"
  size: 0
  sha256: e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
- directory: ~
  filename: Test Artist - Test Album - 01 Track One.flac
  size: 2861359
  sha256: 209a62d961f52f9714395465d2fb89ab51e8b599a35bcf59143c0ed287b6f5e2
  audio:
    duration_ms: 65000
    overall_bitrate: 352
    audio_bitrate: 352
    sample_rate: 48000
    bit_depth: 24
    channels: 2
    channel_mask: ~
    tags:
      VorbisComments:
        AlbumTitle: Test Album
        Comment: Processed by SoX
        EncoderSoftware: reference libFLAC 1.5.0 20250211
        RecordingDate: "2020"
        TrackArtist: Test Artist
        TrackNumber: "1"
        TrackTitle: Track One
    pictures:
      - picture_type: CoverFront
        mime_type: Png
        description: ~
        size: 849
        sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
- directory: ~
  filename: Test Artist - Test Album - 02 Track Two.flac
  size: 3830487
  sha256: 1c8fac11d390266addc7a0e4e5581533466dc58c81b15daf3be52ef72c4d09b8
  audio:
    duration_ms: 65000
    overall_bitrate: 471
    audio_bitrate: 471
    sample_rate: 48000
    bit_depth: 24
    channels: 2
    channel_mask: ~
    tags:
      VorbisComments:
        AlbumTitle: Test Album
        Comment: Processed by SoX
        EncoderSoftware: reference libFLAC 1.5.0 20250211
        RecordingDate: "2020"
        TrackArtist: Test Artist
        TrackNumber: "2"
        TrackTitle: Track Two
    pictures:
      - picture_type: CoverFront
        mime_type: Png
        description: ~
        size: 849
        sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
- directory: ~
  filename: cover.png
  size: 849
  sha256: c73b57d8ad7de5ea9911190a5a1bcebe9b43b6250166b91b12f5c3ee969ba588
  image:
    width: 100
    height: 100
    color_type: Rgb8
